[tool.poetry]
name = "s3versioning"
version = "0.1.0"
description = "Version your file with custom names"
authors = ["Afroze Mohamed <itsmeafroze@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.4"
boto3 = "^1.13"
moto = "^1.3"
pytest-mock = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
